<package>
  <name>collada_parser</name>
  <version>1.9.15</version>
  <description>
    This package contains a C++ parser for the Collada robot
    description format. The parser reads a Collada XML robot
    description, and creates a C++ URDF model. Although it is possible
    to directly use this parser when working with Collada robot
    descriptions, the preferred user API is found in the urdf package.
  </description>
  <author>Rosen Diankov</author>
  <author>Kei Okada</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/collada_parser</url>
  
  <build_depend>collada-dom</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>urdfdom_headers</build_depend> 
  
  <depend>collada-dom</depend> 
  <depend>roscpp</depend> 
  <depend>urdfdom_headers</depend> 
  
  <!--  <depend package="roscpp"/>
  <rosdep name="urdfdom_headers"/>
  <rosdep name="colladadom"/>
  -->
  <export>
  </export>
  
</package>

