<package>
  <name>collada_parser</name>
  <version>1.10.18</version>
  <description>
    This package contains a C++ parser for the Collada robot
    description format. The parser reads a Collada XML robot
    description, and creates a C++ URDF model. Although it is possible
    to directly use this parser when working with Collada robot
    descriptions, the preferred user API is found in the urdf package.
  </description>
  <author>Rosen Diankov</author>
  <author>Kei Okada</author>
  <maintainer email="isucan@gmail.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collada_parser</url>
  <url type="repository">https://github.com/ros/robot_model</url>
  <url type="bugtracker">https://github.com/ros/robot_model/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>collada-dom</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdfdom_headers</build_depend>
  <build_depend>urdf_parser_plugin</build_depend>
  <build_depend>class_loader</build_depend>

  <run_depend>collada-dom</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdfdom_headers</run_depend>
  <run_depend>urdf_parser_plugin</run_depend>
  <run_depend>class_loader</run_depend>

  <export>
    <urdf_parser_plugin plugin="${prefix}/collada_parser_plugin_description.xml"/>
  </export>

</package>

