<package>
  <name>collada_urdf</name>
  <version>1.11.5</version>
  <description>
    This package contains a tool to convert Unified Robot Description Format (URDF) documents into COLLAborative Design Activity (COLLADA) documents.

    Implements robot-specific COLLADA extensions as defined by
    http://openrave.programmingvision.com/index.php/Started:COLLADA
  </description>

  <author>Tim Field</author>
  <author>Rosen Diankov</author>
  <maintainer email="isucan@gmail.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collada_urdf</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>assimp-dev</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>collada-dom</build_depend>
  <build_depend>collada_parser</build_depend>
  <build_depend>liburdfdom-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>assimp</run_depend>
  <run_depend>collada-dom</run_depend>
  <run_depend>collada_parser</run_depend>
  <run_depend>liburdfdom-dev</run_depend>
  <run_depend>liburdfdom-headers-dev</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometric_shapes</run_depend>

</package>
