<package format="2">
  <name>kdl_parser</name>
  <version>1.13.1</version>
  <description>
   The Kinematics and Dynamics Library (KDL) defines a tree structure
   to represent the kinematic and dynamic parameters of a robot
   mechanism. <tt>kdl_parser</tt> provides tools to construct a KDL
   tree from an XML robot representation in URDF.
  </description>

  <author email="wim@willowgarage.com">Wim Meeussen</author>
  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kdl_parser</url>
  <url type="repository">https://github.com/ros/kdl_parser</url>
  <url type="bugtracker">https://github.com/ros/kdl_parser/issues</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend version_gte="1.3.0">orocos_kdl</depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>rosconsole</build_depend>

  <build_export_depend>liburdfdom-headers-dev</build_export_depend>

  <exec_depend>rosconsole</exec_depend>

  <depend>tinyxml</depend>
  <depend>tinyxml2</depend>
  <depend>urdf</depend>

  <test_depend>roscpp</test_depend>
  <test_depend>rostest</test_depend>

</package>
