<package>
  <name>kdl_parser</name>
  <version>1.11.15</version>
  <description>
   The Kinematics and Dynamics Library (KDL) defines a tree structure
   to represent the kinematic and dynamic parameters of a robot
   mechanism. <tt>kdl_parser</tt> provides tools to construct a KDL
   tree from an XML robot representation in URDF.
  </description>

  <author email="wim@willowgarage.com">Wim Meeussen</author>
  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kdl_parser</url>
  <url type="repository">https://github.com/ros/kdl_parser</url>
  <url type="bugtracker">https://github.com/ros/kdl_parser/issues</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend version_gte="1.3.0">orocos_kdl</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>

</package>
