<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kdl_parser_py</name>
  <version>1.14.2</version>
  <description>
   The Kinematics and Dynamics Library (KDL) defines a tree structure
   to represent the kinematic and dynamic parameters of a robot
   mechanism. <tt>kdl_parser_py</tt> provides Python tools to construct a KDL
   tree from an XML robot representation in URDF.
  </description>

  <author email="jonathan.bohren@gmail.com">Jonathan Bohren</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kdl_parser_py</url>
  <url type="repository">https://github.com/ros/kdl_parser</url>
  <url type="bugtracker">https://github.com/ros/kdl_parser/issues</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</buildtool_depend>

  <build_export_depend>urdfdom_py</build_export_depend>

  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>python3-pykdl</exec_depend>

  <test_depend>rostest</test_depend>

</package>
